3605: More improvements to overflow rendering.  More fixes to rendering when started_at and finished_at are missing.

--- a/apps/workbench/app/assets/stylesheets/application.css.scss
+++ b/apps/workbench/app/assets/stylesheets/application.css.scss
@@ -252,3 +252,8 @@ span.editable-textile {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+.time-label-divider {
+  font-size: 80%;
+  min-width: 1em;
+  padding: 0px 2px 0px 0px;
+}
