--- a/apps/workbench/app/assets/stylesheets/projects.css.scss
+++ b/apps/workbench/app/assets/stylesheets/projects.css.scss
@@ -58,12 +58,6 @@ div.scroll-20em {
   border-radius: .3em;
 }
 
-.x-ellip {
-  overflow-x: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
 .dashboard-panel-info-row:hover {
   background-color: #D9EDF7;
 }
